// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`nyc rc A file exists 1`] = `[]`;

exports[`nyc rc A file exists 2`] = `
[
  "nycrc-file-exists",
]
`;

exports[`nyc rc A file exists 3`] = `[]`;

exports[`nyc rc B check skip on a non nyc/c8 project 1`] = `[]`;

exports[`nyc rc B check skip on a non nyc/c8 project 2`] = `[]`;

exports[`nyc rc B check skip on a non nyc/c8 project 3`] = `[]`;

exports[`nyc rc C file missing 1`] = `[]`;

exports[`nyc rc C file missing 2`] = `
[
  "nycrc-file-exists",
]
`;

exports[`nyc rc C file missing 3`] = `[]`;

exports[`nyc rc D file exists but not a json ext file 1`] = `
[
  "nycrc-file-exists",
  "has-a-nycrc-file",
  "nycrc-has-a-schema-declaration",
]
`;

exports[`nyc rc D file exists but not a json ext file 2`] = `[]`;

exports[`nyc rc D file exists but not a json ext file 3`] = `[]`;
